# sonic-buildimage

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  BUILD.bazel  MODULE.bazel
.bazelbsp/: .bazelproject
dockers/docker-base-bookworm/: BUILD.bazel  base_bookworm.MODULE.bazel  mutate.awk  pyproject.toml  site_packages.bzl
dockers/docker-base-bookworm/tests/: BUILD.bazel  site-packages_layer.expected.txt
dockers/docker-bmp-watchdog/: BUILD.bazel
dockers/docker-bmp-watchdog/watchdog/: BUILD.bazel  Cargo.toml
dockers/docker-config-engine-bookworm/: BUILD.bazel
dockers/docker-database/: BUILD.bazel  docker-database-init.sh
dockers/docker-gnmi-watchdog/: BUILD.bazel
dockers/docker-gnmi-watchdog/watchdog/: BUILD.bazel  Cargo.toml
dockers/docker-gnmi-watchdog/watchdog/src/: main.rs
dockers/docker-orchagent/: BUILD.bazel  docker-init.j2
dockers/docker-orchagent/tests/: BUILD.bazel  site-packages.expected.txt
dockers/docker-platform-monitor/: BUILD.bazel
dockers/docker-sflow/: BUILD.bazel
dockers/docker-sonic-gnmi/: BUILD.bazel
dockers/docker-sonic-p4rt/: BUILD.bazel
dockers/docker-swss-layer-bookworm/: BUILD.bazel
dockers/docker-sysmgr/: BUILD.bazel
dockers/docker-teamd/: BUILD.bazel
files/: BUILD.bazel
patches/: BUILD.bazel  aspect_rules_py.patch
platform/: BUILD.bazel
platform/broadcom/docker-syncd-brcm/: BUILD.bazel
platform/marvell-prestera/: BUILD.bazel  mrvllibsai.BUILD  prestera.MODULE.bazel
platform/marvell-prestera/docker-syncd-mrvl-prestera/: BUILD.bazel  syncd_start.sh
platform/vs/docker-syncd-vs/: BUILD.bazel
rules/: telemetry.dep  telemetry.mk
src/libnl3/: .gitignore  BUILD.bazel  MODULE.bazel  libnl3.BUILD  libnl3_src.bzl
src/libnl3/patch/: fix-icmp6-mib-max-assert.patch
src/libteam/: .gitignore  BUILD.bazel  MODULE.bazel  libteam.BUILD
src/libyang/: .gitignore  BUILD.bazel  MODULE.bazel  build_constants.bzl  libyang.BUILD  libyang_src.bzl  pkg_path.bzl
src/libyang/bazel_tests/: libyang-cpp_pkg.expected.txt  libyang-dev_pkg.expected.txt  libyang_pkg.expected.txt  python3-yang_pkg.expected.txt
src/libyang3/: .gitignore  BUILD.bazel  MODULE.bazel  libyang3.BUILD
src/libyang3-py3/: BUILD.bazel  MODULE.bazel  libyang3_py3.BUILD  pyproject.toml  sdist_build_from_src.bzl
src/libyang3-py3/tests/: BUILD.bazel  libyang3-python_pkg.expected.txt
src/sflow/hsflowd/: .gitignore  BUILD.bazel  MODULE.bazel  hsflowd.BUILD
src/sflow/psample/: .gitignore  BUILD.bazel  MODULE.bazel  psample.BUILD
src/sflow/sflowtool/: .gitignore  BUILD.bazel  MODULE.bazel  sflowtool.BUILD
src/sonic-config-engine/: .bazelrc  BUILD.bazel  MODULE.bazel  pyproject.toml  setup.py
src/sonic-py-common/: .bazelrc  BUILD.bazel  MODULE.bazel  pyproject.toml
src/sonic-supervisord-utilities/: BUILD.bazel  MODULE.bazel  pyproject.toml
src/sonic-sysmgr/: BUILD.bazel  MODULE.bazel  gnoi.bzl  libdbus_bin_repo.bzl
src/sonic-sysmgr/rebootbackend/: BUILD.bazel
src/sonic-yang-mgmt/: BUILD.bazel  MODULE.bazel  pyproject.toml
src/sonic-yang-models/: MODULE.bazel
toolchains/: BUILD.bazel  gcc.MODULE.bazel
toolchains/args/: BUILD.bazel
toolchains/gcc/: BUILD.bazel  gcc.BUILD  gcc.bzl
toolchains/gcc/args/: BUILD.bazel
toolchains/gcc/tools/: BUILD.bazel
tools/bazel/: README_Aarch64.md  install_deps.bash  migration_manager.py  test_working_targets.sh
tools/bazel/docs/: import-external-projects.md
tools/bazel/docs/examples/builder-image/: BUILD.bazel
tools/bazel/patches/: BUILD.bazel  aspect_rules_py_sdist_use_default_shell_env.patch  rules_distroless_apt_arm64_arch_union.patch
tools/bazel/registry/: bazel_registry.json  generate_registry.py
tools/bazel/registry/modules/hsflowd/: metadata.json
tools/bazel/registry/modules/hsflowd/2.0.51-26/: MODULE.bazel  source.json
tools/bazel/registry/modules/libnl3/: metadata.json
tools/bazel/registry/modules/libnl3/3.7.0/: MODULE.bazel  source.json
tools/bazel/registry/modules/libteam/: metadata.json
tools/bazel/registry/modules/libteam/1.31/: MODULE.bazel  source.json
tools/bazel/registry/modules/libyang/: metadata.json
tools/bazel/registry/modules/libyang/1.0.73/: MODULE.bazel  source.json
tools/bazel/registry/modules/libyang3/: metadata.json
tools/bazel/registry/modules/libyang3/3.12.2/: MODULE.bazel  source.json
tools/bazel/registry/modules/libyang3_py3/: metadata.json
tools/bazel/registry/modules/libyang3_py3/3.1.0/: MODULE.bazel  source.json
tools/bazel/registry/modules/psample/: metadata.json
tools/bazel/registry/modules/psample/1.1-1/: MODULE.bazel  source.json
tools/bazel/registry/modules/rules_go/: metadata.json
tools/bazel/registry/modules/rules_go/0.60.0.patched/: MODULE.bazel  source.json
tools/bazel/registry/modules/rules_go/0.60.0.sonic-patched/: MODULE.bazel  source.json
tools/bazel/registry/modules/sai/0.0.0/: MODULE.bazel  sai_doxygen_linux_arm_launcher.bzl  source.json
tools/bazel/registry/modules/sflowtool/: metadata.json
tools/bazel/registry/modules/sflowtool/5.04/: MODULE.bazel  source.json
tools/bazel/registry/modules/sonic-build-infra/0.0.0/: MODULE.bazel  source.json
tools/bazel/registry/modules/sonic-config-engine/0.0.0/: MODULE.bazel  source.json
tools/bazel/registry/modules/sonic-dash-api/0.0.0/: MODULE.bazel  source.json
tools/bazel/registry/modules/sonic-gnmi/0.0.0/: MODULE.bazel  source.json
tools/bazel/registry/modules/sonic-host-services/: metadata.json
tools/bazel/registry/modules/sonic-host-services/0.0.0/: MODULE.bazel  source.json
tools/bazel/registry/modules/sonic-mgmt-common/1.0.0/: MODULE.bazel  source.json
tools/bazel/registry/modules/sonic-pins/0.0.0/: MODULE.bazel  source.json
tools/bazel/registry/modules/sonic-platform-common/0.0.0/: MODULE.bazel  source.json
tools/bazel/registry/modules/sonic-platform-daemons/0.0.0/: MODULE.bazel  source.json
tools/bazel/registry/modules/sonic-py-common/0.0.0/: MODULE.bazel  source.json
tools/bazel/registry/modules/sonic-py-swsssdk/0.0.0/: MODULE.bazel  source.json
tools/sonic-bazel-common/: BUILD.bazel  MODULE.bazel
(+19 files in other folders)
