module(name = "sonic-buildimage")

bazel_dep(name = "rules_cc", version = "0.2.10")
bazel_dep(name = "rules_foreign_cc", version = "0.14.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "tar.bzl", version = "0.5.5")

bazel_dep(name = "rules_distroless", version = "0.0.0", repo_name = "rules_deb")
local_path_override(
    module_name = "rules_distroless",
    path = "../rules_distroless"
)

bazel_dep(name = "aspect_rules_py", version = "1.7.1")
single_version_override(
    module_name = "aspect_rules_py",
    patch_strip = 1,
    patches = [
        "//patches:aspect_rules_py.patch",
    ],
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11.6")

include("//dockers/docker-base-bookworm:base_bookworm.MODULE.bazel")

bazel_dep(name = "sonic-bazel-common", version = "0.0.0", repo_name = "sonic_bazel_common")
local_path_override(
  module_name = "sonic-bazel-common",
  path = "tools/sonic-bazel-common",
)

bazel_dep(name = "sonic-py-common", version = "0.0.0", repo_name = "sonic_py_common")
local_path_override(
    module_name = "sonic-py-common",
    path = "src/sonic-py-common",
)

bazel_dep(name = "sonic-supervisord-utilities", version = "0.0.0", repo_name = "sonic_supervisord_utilities")
local_path_override(
    module_name = "sonic-supervisord-utilities",
    path = "src/sonic-supervisord-utilities",
)

bazel_dep(name = "sonic-config-engine", version = "0.0.0", repo_name = "sonic_config_engine")
local_path_override(
    module_name = "sonic-config-engine",
    path = "src/sonic-config-engine",
)

bazel_dep(name = "sonic-yang-mgmt", version = "0.0.0", repo_name = "sonic_yang_mgmt")
local_path_override(
    module_name = "sonic-yang-mgmt",
    path = "src/sonic-yang-mgmt",
)


# These are needed to build p4rt

single_version_override(
    module_name = "abseil-cpp",
    version = "20240722.0"
)

single_version_override(
    module_name = "grpc",
    version = "1.71.1",
)

bazel_dep(name = "rules_boost", version = "0.0.0")
archive_override(
    module_name = "rules_boost",
    urls = ["https://github.com/nelhage/rules_boost/archive/a0643ef5ea1f939da59c42a6a5f21d1c0ffcff4f.zip"],
    strip_prefix = "rules_boost-a0643ef5ea1f939da59c42a6a5f21d1c0ffcff4f",
    sha256 = ""
)
boost = use_extension("@rules_boost//:boost/repositories.bzl", "non_module_dependencies")
use_repo(
    boost,
    "boost",
)



# P4
bazel_dep(name = "p4runtime", repo_name = "com_github_p4lang_p4runtime")
local_path_override(
    module_name = "p4runtime",
    path = "../p4runtime/proto"
)

bazel_dep(name = "p4constraints", repo_name = "com_github_p4lang_p4_constraints")
local_path_override(
    module_name = "p4constraints",
    path = "../p4-constraints"
)


bazel_dep(name = "p4c", repo_name = "com_github_p4lang_p4c")
local_path_override(
    module_name = "p4c",
    path = "../p4c"
)



bazel_dep(name = "gutil", version = "20250502.0", repo_name = "com_google_gutil")
local_path_override(
    module_name = "gutil",
    path = "../gutil"
)


bazel_dep(name = "sonic-swss-common", version = "0.0.0", repo_name = "sonic_swss_common")
local_path_override(
    module_name = "sonic-swss-common",
    path = "../sonic-swss-common"
)

bazel_dep(name = "sonic-py-swsssdk", version = "0.0.0", repo_name = "sonic_py_swsssdk")
local_path_override(
    module_name = "sonic-py-swsssdk",
    path = "../sonic-py-swsssdk"
)

bazel_dep(name = "sonic-pins", version = "0.0.0")
local_path_override(
    module_name = "sonic-pins",
    path = "../sonic-pins"
)

bazel_dep(name = "sonic-build-infra", version = "0.0.0")
local_path_override(
    module_name = "sonic-build-infra",
    path = "../sonic-build-infra"
)

register_toolchains("@sonic-build-infra//toolchains/gcc:host_gcc_toolchain")

bazel_dep(name = "libyang3", version = "3.12.2")
local_path_override(
    module_name = "libyang3",
    path = "src/libyang3",
)

bazel_dep(name = "libyang3_py3", version = "3.1.0")
local_path_override(
    module_name = "libyang3_py3",
    path = "src/libyang3-py3",
)

bazel_dep(name = "sonic-platform-common", version = "0.0.0", repo_name = "sonic_platform_common")
local_path_override(
    module_name = "sonic-platform-common",
    path = "../sonic-platform-common",
)

bazel_dep(name = "sonic-platform-daemons", version = "0.0.0", repo_name = "sonic_platform_daemons")
local_path_override(
    module_name = "sonic-platform-daemons",
    path = "../sonic-platform-daemons",
)
