module(name = "sonic-buildimage")

bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "tar.bzl", version = "0.8.1")
git_override(
    module_name = "tar.bzl",
    commit = "9b76e660363ab2465d89d3aadbbc1f7afa02e65c",
    remote = "https://github.com/bazel-contrib/tar.bzl",
)
bazel_dep(name = "bazel_lib", version = "3.1.1")
bazel_dep(name = "rules_distroless", version = "0.0.0", repo_name = "rules_deb")
local_path_override(
    module_name = "rules_distroless",
    path = "../rules_distroless",
)

bazel_dep(name = "aspect_rules_py", version = "1.8.4")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11.6")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

include("//dockers/docker-base-bookworm:base_bookworm.MODULE.bazel")
include("//platform/broadcom:broadcom.MODULE.bazel")

bazel_dep(name = "sonic-py-common", version = "0.0.0", repo_name = "sonic_py_common")
local_path_override(
    module_name = "sonic-py-common",
    path = "src/sonic-py-common",
)

bazel_dep(name = "sonic-supervisord-utilities", version = "0.0.0", repo_name = "sonic_supervisord_utilities")
local_path_override(
    module_name = "sonic-supervisord-utilities",
    path = "src/sonic-supervisord-utilities",
)

bazel_dep(name = "sonic-config-engine", version = "0.0.0", repo_name = "sonic_config_engine")
local_path_override(
    module_name = "sonic-config-engine",
    path = "src/sonic-config-engine",
)

bazel_dep(name = "sonic-yang-mgmt", version = "0.0.0", repo_name = "sonic_yang_mgmt")
local_path_override(
    module_name = "sonic-yang-mgmt",
    path = "src/sonic-yang-mgmt",
)

bazel_dep(name = "sonic-yang-models", version = "0.0.0", repo_name = "sonic_yang_models")
local_path_override(
    module_name = "sonic-yang-models",
    path = "src/sonic-yang-models",
)

# These are needed to build p4rt

single_version_override(
    module_name = "abseil-cpp",
    version = "20240722.0",
)

single_version_override(
    module_name = "grpc",
    version = "1.71.1",
)

# rules_go 0.56.1 (pulled transitively by grpc) is incompatible
# with Bazel 8.5.x due to Facts.clear() API change. Minimum needed: 0.59.0.
single_version_override(
    module_name = "rules_go",
    version = "0.60.0",
)

bazel_dep(name = "rules_boost", version = "0.0.0")
archive_override(
    module_name = "rules_boost",
    sha256 = "",
    strip_prefix = "rules_boost-a0643ef5ea1f939da59c42a6a5f21d1c0ffcff4f",
    urls = ["https://github.com/nelhage/rules_boost/archive/a0643ef5ea1f939da59c42a6a5f21d1c0ffcff4f.zip"],
)

boost = use_extension("@rules_boost//:boost/repositories.bzl", "non_module_dependencies")
use_repo(
    boost,
    "boost",
)

# P4
bazel_dep(name = "p4runtime", repo_name = "com_github_p4lang_p4runtime")
local_path_override(
    module_name = "p4runtime",
    path = "../p4runtime/proto",
)

bazel_dep(name = "p4constraints", repo_name = "com_github_p4lang_p4_constraints")
local_path_override(
    module_name = "p4constraints",
    path = "../p4-constraints",
)

bazel_dep(name = "p4c", repo_name = "com_github_p4lang_p4c")
local_path_override(
    module_name = "p4c",
    path = "../p4c",
)

bazel_dep(name = "gutil", version = "20250502.0", repo_name = "com_google_gutil")
local_path_override(
    module_name = "gutil",
    path = "../gutil",
)

bazel_dep(name = "sonic-swss-common", version = "0.0.0", repo_name = "sonic_swss_common")
local_path_override(
    module_name = "sonic-swss-common",
    path = "../sonic-swss-common",
)

bazel_dep(name = "sonic-py-swsssdk", version = "0.0.0", repo_name = "sonic_py_swsssdk")
local_path_override(
    module_name = "sonic-py-swsssdk",
    path = "../sonic-py-swsssdk",
)

bazel_dep(name = "sonic-pins", version = "0.0.0")
local_path_override(
    module_name = "sonic-pins",
    path = "../sonic-pins",
)

# TODO(bazel-ready): Disabled since gnmi is not working right now.
# bazel_dep(name = "sonic-gnmi", version = "0.0.0")
# local_path_override(
#     module_name = "sonic-gnmi",
#     path = "../sonic-gnmi",
# )
#
bazel_dep(name = "sonic-build-infra", version = "0.0.0", repo_name = "sonic_build_infra")
local_path_override(
    module_name = "sonic-build-infra",
    path = "../sonic-build-infra",
)

register_toolchains("@sonic_build_infra//toolchains/gcc:host_gcc_toolchain")

bazel_dep(name = "libyang", version = "1.0.73")
local_path_override(
    module_name = "libyang",
    path = "src/libyang",
)

bazel_dep(name = "libyang3", version = "3.12.2")
local_path_override(
    module_name = "libyang3",
    path = "src/libyang3",
)

bazel_dep(name = "libnl3", version = "3.7.0")
local_path_override(
    module_name = "libnl3",
    path = "src/libnl3",
)

# TODO(bazel-ready): replace with new version of rules_m4 when this merges:
#  https://github.com/jmillikin/rules_m4/pull/23
git_override(
    module_name = "rules_m4",
    commit = "54e35332761523b8b8c7e7a17c8fd3733e53e3e7",
    remote = "https://github.com/blorente/rules_m4",
)

bazel_dep(name = "libyang3_py3", version = "3.1.0")
local_path_override(
    module_name = "libyang3_py3",
    path = "src/libyang3-py3",
)

bazel_dep(name = "hsflowd", version = "2.0.51-26")
local_path_override(
    module_name = "hsflowd",
    path = "src/sflow/hsflowd",
)

bazel_dep(name = "psample", version = "1.1-1")
local_path_override(
    module_name = "psample",
    path = "src/sflow/psample",
)

bazel_dep(name = "sflowtool", version = "5.04")
local_path_override(
    module_name = "sflowtool",
    path = "src/sflow/sflowtool",
)

bazel_dep(name = "sonic-platform-common", version = "0.0.0", repo_name = "sonic_platform_common")
local_path_override(
    module_name = "sonic-platform-common",
    path = "../sonic-platform-common",
)

bazel_dep(name = "sonic-platform-daemons", version = "0.0.0", repo_name = "sonic_platform_daemons")
local_path_override(
    module_name = "sonic-platform-daemons",
    path = "../sonic-platform-daemons",
)

# TODO(bazel-ready): Commenting out because gnmi is not ready
# bazel_dep(name = "sonic-mgmt-common", version = "1.0.0")
# local_path_override(
#     module_name = "sonic-mgmt-common",
#     path = "../sonic-mgmt-common",
# )
#

# Needed for swss.

bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "sonic-swss", version = "0.0.0", repo_name = "sonic_swss")
local_path_override(
    module_name = "sonic-swss",
    path = "../sonic-swss",
)

bazel_dep(name = "sonic-sairedis", version = "0.0.0", repo_name = "sonic_sairedis")
local_path_override(
    module_name = "sonic-sairedis",
    path = "../sonic-sairedis",
)

bazel_dep(name = "sai", version = "0.0.0")
local_path_override(
    module_name = "sai",
    path = "../sonic-sairedis/SAI",
)

bazel_dep(name = "sonic-dash-api", version = "0.0.0", repo_name = "sonic_dash_api")
local_path_override(
    module_name = "sonic-dash-api",
    path = "../sonic-dash-api",
)

# Needed for syncd

bazel_dep(name = "sonic-host-services", version = "0.0.0", repo_name = "sonic_host_services")
local_path_override(
    module_name = "sonic-host-services",
    path = "../sonic-host-services",
)

bazel_dep(name = "sonic-utilities", version = "0.0.0", repo_name = "sonic_utilities")
local_path_override(
    module_name = "sonic-utilities",
    path = "../sonic-utilities",
)

bazel_dep(name = "sonic-sysmgr", version = "0.0.0", repo_name = "sonic_sysmgr")
local_path_override(
    module_name = "sonic-sysmgr",
    path = "src/sonic-sysmgr",
)

# Needed for teamd

bazel_dep(name = "libteam", version = "0.0.0", repo_name = "libteam")
local_path_override(
    module_name = "libteam",
    path = "src/libteam",
)
