fetch_gcc = use_repo_rule("//toolchains/gcc:gcc.bzl", "fetch_gcc")

fetch_gcc(
    name = "gcc-linux-x86_64",
    integrity = "sha256-UQduF1g5tDS7LcAAbACWkW31hejERmbTWw486CHVNds=",
    urls = ["https://github.com/f0rmiga/gcc-builds/releases/download/18082025/gcc-toolchain-12.5.0-x86_64.tar.xz"],
)


# fetch_gcc(
#     name = "gcc-linux-x86_64",
#     integrity = "sha256-CzZeXaRR9cetxZT5Z4hdcYH/bRh9YImkvPNvlUvzzPk=",
#     urls = ["https://github.com/f0rmiga/gcc-builds/releases/download/18082025/gcc-toolchain-14.3.0-x86_64.tar.xz"],
# )

register_toolchains(
    "//toolchains/gcc:host_gcc_toolchain",
    dev_dependency = True,
)


apt = use_extension("@rules_deb//apt:extensions.bzl", "apt")

apt.install(
    dependency_set = "bookworm",
    target_release = "bookworm",
    packages = [
        "libstdc++6",
        "linux-libc-dev",
        "libc6-dev",
        "libgcc-12-dev",
        # implicit dependency of p4rt-constraints
        "libgmp-dev"
    ]
)
