load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_deb//distroless:defs.bzl", "flatten", "group", "passwd")
load("@tar.bzl", "tar", "mutate")
load("@aspect_rules_py//py/unstable:defs.bzl", "py_venv_binary")
load(":site_packages.bzl", "site_packages")

site_packages(
    name = "site-packages",
    srcs = [
        "@pip//supervisor",
        "@pip//supervisord_dependent_startup",
        "@pip//j2cli"
    ],
    mutate = mutate(
        strip_prefix = "install",
        package_dir = "./usr",
        awk_script = "@sonic_bazel_common//:mutate_python_packages",
    )
)

passwd(
    name = "passwd",
    entries = [
        {
            "uid": 0,
            "gid": 0,
            "home": "/root",
            "shell": "/bin/bash",
            "username": "root",
        }
    ],
)

group(
    name = "group",
    entries = [
        {
            "name": "root",
            "gid": 0,
        },
        {
            "name": "adm",
            "gid": 4,
        },
    ],
)


tar(
    name = "rootfs",
    srcs = glob(["etc/**/*", "root/*"]),
    mutate = mutate(strip_prefix = package_name())
)


tar(
    name = "rootdirslinks",
    mtree = [
        "./bin/sh type=link link=/bin/bash",
        "./var/log/supervisor type=dir",
        "./etc/supervisor/conf.d type=dir",
        "./usr/bin/vim.tiny type=link link=/usr/bin/vim"
    ]
)


flatten(
    name = "flat",
    tars = [
        "@bookworm//base-files",
        "@bookworm//ca-certificates",
        "@bookworm//libc6",
        "@bookworm//libc-bin",
        "@bookworm//libssl3",
        "@bookworm//netbase",
        "@bookworm//openssl",
        "@bookworm//tzdata",
        "@bookworm//media-types",
        "@bookworm//gcc-12-base",
        "@bookworm//libgcc-s1",
        "@bookworm//libgomp1",
        "@bookworm//libgmpxx4ldbl",
        "@bookworm//libstdc++6",
        "@bookworm//binutils",
        "@bookworm//krb5-multidev",
        ":passwd",
        ":group",
        "@bookworm//bash",
        "@bookworm//coreutils",
        "@bookworm//curl",
        "@bookworm//less",
        "@bookworm//perl",
        "@bookworm//procps",
        "@bookworm//python3",
        "@bookworm//python-is-python3",
        "@bookworm//python3-dev",
        "@bookworm//vim-tiny",
        "@bookworm//rsyslog",
        "@bookworm//redis-tools",
        "@bookworm//libdaemon0",
        "@bookworm//libdbus-1-3",
        "@bookworm//libjansson4",
        "@bookworm//iproute2",
        "@bookworm//net-tools",
        "@bookworm//jq",
        "@bookworm//libzmq5",
        "@bookworm//libwrap0",
        "@bookworm//libatomic1",
        "@bookworm//libgmp10",


        # Transitives
        "@bookworm//libhiredis-dev",
        "@bookworm//libnl-3-dev",
        "@bookworm//libnl-genl-3-dev",
        "@bookworm//libnl-route-3-dev",
        "@bookworm//libnl-nf-3-dev",
        "@bookworm//libboost-dev",
        "@bookworm//libboost-serialization-dev",
        "@bookworm//uuid-dev",
        "@bookworm//libzmq3-dev",
        "@bookworm//libpcre2-8-0",
        "@bookworm//libyang2-dev",
    ],
    deduplicate = True
)

oci_image(
    name = "docker-base-bookworm",
    tars = [
        ":rootfs",
        ":rootdirslinks",
        ":flat",
        ":site-packages",
        "@sonic_supervisord_utilities//:dist",
    ],
    env = {
        "DEBIAN_FRONTEND": "noninteractive"
    },
    entrypoint = ["/usr/bin/supervisord"],
    architecture = "amd64",
    os = "linux",
    visibility = ["//visibility:public"]
)

oci_load(
    name = "load",
    image = "docker-base-bookworm",
    repo_tags = ["docker-base-bookworm:latest"]
)
