apt = use_extension("@rules_deb//apt:extensions.bzl", "apt")

apt.sources_list(
    architectures = ["amd64"],
    components = ["main"],
    suites = ["bookworm", "bookworm-updates"],
    uris = ["https://snapshot.debian.org/archive/debian/20251001T023456Z"],
)

apt.sources_list(
    architectures = ["amd64"],
    components = ["main"],
    suites = ["bookworm-security"],
    uris = ["https://snapshot.debian.org/archive/debian-security/20251001T023456Z"],
)

apt.install(
    dependency_set = "bookworm",
    suites = ["bookworm", "bookworm-security", "bookworm-updates"],
    packages = [
        "base-files",
        "ca-certificates",
        "libc6",
        "libc-bin",
        "libssl3",
        "netbase",
        "openssl",
        "tzdata",
        "media-types",
        "gcc-12-base",
        "libgcc-s1",
        "libgomp1",
        "libstdc++6",
        "binutils",


        "krb5-multidev",

        "coreutils",
        "bash",
        "curl",
        "less",
        "perl",
        "procps",
        "python3",
        "python-is-python3",
        "vim-tiny",
        "rsyslog",
        "redis-tools",
        "libdaemon0",
        "libdbus-1-3",
        "libjansson4",
        "iproute2",
        "net-tools",
        "jq",
        "libzmq5",
        "libwrap0",
        "libatomic1",
        "libgmp10",
        "libgmpxx4ldbl",
        "libpcre2-8-0",
        "libyang2-dev",
    ]
)

use_repo(apt, "bookworm")


uv = use_extension("@aspect_rules_py//uv/unstable:extension.bzl", "uv")
uv.declare_hub(hub_name = "pip")
uv.declare_venv(
    hub_name = "pip",
    venv_name = "default",
)
uv.lockfile(
    hub_name = "pip",
    venv_name = "default",
    src = "//dockers/docker-base-bookworm:uv.lock",
)
uv.override_requirement(
    hub_name = "pip",
    requirement = "libyang",
    target = "@libyang3_py3//:libyang3_py3",
    venv_name = "default",
)
use_repo(uv, "pip")
